[gd_scene load_steps=14 format=3 uid="uid://dd4e3bya12152"]

[ext_resource type="PackedScene" uid="uid://l5teh660i2b" path="res://Models/Clock/Clock.glb" id="1_qwh1c"]
[ext_resource type="Script" uid="uid://dj2epr0331pe8" path="res://Objects/Clock/hand_static_body.gd" id="2_jh2y0"]
[ext_resource type="Script" uid="uid://belv2ec57d552" path="res://Objects/Clock/clock.gd" id="2_lixsf"]
[ext_resource type="Script" uid="uid://8c5ojseiws8k" path="res://Objects/Clock/placement_static_body.gd" id="4_m14rh"]
[ext_resource type="AudioStream" uid="uid://p1ynea628rh7" path="res://Sound/tick.wav" id="5_nrm7x"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jh2y0"]
data = PackedVector3Array(-1, 0, 1, -0.4622, 7.0536, -0.4622, -0.4622, 7.0536, 0.4622, -1, 0, 1, -1, 0, -1, -0.4622, 7.0536, -0.4622, -1, 0, -1, 0.4622, 7.0536, -0.4622, -0.4622, 7.0536, -0.4622, -1, 0, -1, 0.3403, 0, -1, 0.4622, 7.0536, -0.4622, 0.3403, 0, -1, 0.4622, 7.0536, 0.4622, 0.4622, 7.0536, -0.4622, 0.3403, 0, -1, 0.3403, 0, 1, 0.4622, 7.0536, 0.4622, 0.3403, 0, 1, -0.4622, 7.0536, 0.4622, 0.4622, 7.0536, 0.4622, 0.3403, 0, 1, -1, 0, 1, -0.4622, 7.0536, 0.4622, -1, 0, -1, 0.3403, 0, 1, 0.3403, 0, -1, -1, 0, -1, -1, 0, 1, 0.3403, 0, 1, 0.4622, 7.0536, -0.4622, -0.4622, 7.0536, 0.4622, -0.4622, 7.0536, -0.4622, 0.4622, 7.0536, -0.4622, 0.4622, 7.0536, 0.4622, -0.4622, 7.0536, 0.4622)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_lixsf"]
data = PackedVector3Array(-1, 0, 1, -0.4622, 15.0241, -0.4622, -0.4622, 15.0241, 0.4622, -1, 0, 1, -1, 0, -1, -0.4622, 15.0241, -0.4622, -1, 0, -1, 0.4622, 15.0241, -0.4622, -0.4622, 15.0241, -0.4622, -1, 0, -1, 0.3403, 0, -1, 0.4622, 15.0241, -0.4622, 0.3403, 0, -1, 0.4622, 15.0241, 0.4622, 0.4622, 15.0241, -0.4622, 0.3403, 0, -1, 0.3403, 0, 1, 0.4622, 15.0241, 0.4622, 0.3403, 0, 1, -0.4622, 15.0241, 0.4622, 0.4622, 15.0241, 0.4622, 0.3403, 0, 1, -1, 0, 1, -0.4622, 15.0241, 0.4622, -1, 0, -1, 0.3403, 0, 1, 0.3403, 0, -1, -1, 0, -1, -1, 0, 1, 0.3403, 0, 1, 0.4622, 15.0241, -0.4622, -0.4622, 15.0241, 0.4622, -0.4622, 15.0241, -0.4622, 0.4622, 15.0241, -0.4622, 0.4622, 15.0241, 0.4622, -0.4622, 15.0241, 0.4622)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nrm7x"]
data = PackedVector3Array(-0.6302, -0.016, -0.1594, -0.3542, -0.016, -0.3188, -0.5136, -0.016, -0.2761, -0.6302, -0.016, -0.1594, -0.0781, -0.016, -0.1594, -0.3542, -0.016, -0.3188, -0.3542, -0.016, -0.3188, -0.0781, -0.016, -0.1594, -0.1948, -0.016, -0.2761, -0.6302, -0.016, 0.1594, -0.6302, -0.016, -0.1594, -0.6729, -0.016, 0, -0.3542, -0.016, 0.3188, -0.6302, -0.016, -0.1594, -0.6302, -0.016, 0.1594, -0.0781, -0.016, -0.1594, -0.6302, -0.016, -0.1594, -0.3542, -0.016, 0.3188, -0.3542, -0.016, 0.3188, -0.6302, -0.016, 0.1594, -0.5136, -0.016, 0.2761, -0.0781, -0.016, -0.1594, -0.3542, -0.016, 0.3188, -0.0781, -0.016, 0.1594, -0.0781, -0.016, 0.1594, -0.3542, -0.016, 0.3188, -0.1948, -0.016, 0.2761, -0.0781, -0.016, -0.1594, -0.0781, -0.016, 0.1594, -0.0354, -0.016, 0, -0.6609, -0.0265, 0.1771, -0.6729, -0.0265, 0, -0.7084, -0.0265, 0, -0.6609, -0.0265, 0.1771, -0.6302, -0.0265, 0.1594, -0.6729, -0.0265, 0, -0.1771, -0.0265, -0.3067, -0.0781, -0.0265, -0.1594, -0.0475, -0.0265, -0.1771, -0.1771, -0.0265, -0.3067, -0.1948, -0.0265, -0.2761, -0.0781, -0.0265, -0.1594, -0.5313, -0.0265, -0.3067, -0.3542, -0.0265, -0.3188, -0.3542, -0.0265, -0.3542, -0.5313, -0.0265, -0.3067, -0.5136, -0.0265, -0.2761, -0.3542, -0.0265, -0.3188, -0.0475, -0.0265, 0.1771, -0.1948, -0.0265, 0.2761, -0.1771, -0.0265, 0.3067, -0.0475, -0.0265, 0.1771, -0.0781, -0.0265, 0.1594, -0.1948, -0.0265, 0.2761, -0.5313, -0.0265, 0.3067, -0.6302, -0.0265, 0.1594, -0.6609, -0.0265, 0.1771, -0.5313, -0.0265, 0.3067, -0.5136, -0.0265, 0.2761, -0.6302, -0.0265, 0.1594, -0.3542, -0.0265, -0.3542, -0.1948, -0.0265, -0.2761, -0.1771, -0.0265, -0.3067, -0.3542, -0.0265, -0.3542, -0.3542, -0.0265, -0.3188, -0.1948, -0.0265, -0.2761, -0.6609, -0.0265, -0.1771, -0.5136, -0.0265, -0.2761, -0.5313, -0.0265, -0.3067, -0.6609, -0.0265, -0.1771, -0.6302, -0.0265, -0.1594, -0.5136, -0.0265, -0.2761, 0, -0.0265, 0, -0.0781, -0.0265, 0.1594, -0.0475, -0.0265, 0.1771, 0, -0.0265, 0, -0.0354, -0.0265, 0, -0.0781, -0.0265, 0.1594, -0.3542, -0.0265, 0.3542, -0.5136, -0.0265, 0.2761, -0.5313, -0.0265, 0.3067, -0.3542, -0.0265, 0.3542, -0.3542, -0.0265, 0.3188, -0.5136, -0.0265, 0.2761, -0.7084, -0.0265, 0, -0.6302, -0.0265, -0.1594, -0.6609, -0.0265, -0.1771, -0.7084, -0.0265, 0, -0.6729, -0.0265, 0, -0.6302, -0.0265, -0.1594, -0.0475, -0.0265, -0.1771, -0.0354, -0.0265, 0, 0, -0.0265, 0, -0.0475, -0.0265, -0.1771, -0.0781, -0.0265, -0.1594, -0.0354, -0.0265, 0, -0.1771, -0.0265, 0.3067, -0.3542, -0.0265, 0.3188, -0.3542, -0.0265, 0.3542, -0.1771, -0.0265, 0.3067, -0.1948, -0.0265, 0.2761, -0.3542, -0.0265, 0.3188, -0.1771, -0.0265, 0.3067, -0.0475, 0, 0.1771, -0.0475, -0.0265, 0.1771, -0.1771, -0.0265, 0.3067, -0.1771, 0, 0.3067, -0.0475, 0, 0.1771, -0.6609, -0.0265, 0.1771, -0.5313, 0, 0.3067, -0.5313, -0.0265, 0.3067, -0.6609, -0.0265, 0.1771, -0.6609, 0, 0.1771, -0.5313, 0, 0.3067, -0.1771, -0.0265, -0.3067, -0.3542, 0, -0.3542, -0.3542, -0.0265, -0.3542, -0.1771, -0.0265, -0.3067, -0.1771, 0, -0.3067, -0.3542, 0, -0.3542, -0.5313, -0.0265, -0.3067, -0.6609, 0, -0.1771, -0.6609, -0.0265, -0.1771, -0.5313, -0.0265, -0.3067, -0.5313, 0, -0.3067, -0.6609, 0, -0.1771, -0.0475, -0.0265, 0.1771, 0, 0, 0, 0, -0.0265, 0, -0.0475, -0.0265, 0.1771, -0.0475, 0, 0.1771, 0, 0, 0, -0.5313, -0.0265, 0.3067, -0.3542, 0, 0.3542, -0.3542, -0.0265, 0.3542, -0.5313, -0.0265, 0.3067, -0.5313, 0, 0.3067, -0.3542, 0, 0.3542, -0.6609, -0.0265, -0.1771, -0.7084, 0, 0, -0.7084, -0.0265, 0, -0.6609, -0.0265, -0.1771, -0.6609, 0, -0.1771, -0.7084, 0, 0, 0, -0.0265, 0, -0.0475, 0, -0.1771, -0.0475, -0.0265, -0.1771, 0, -0.0265, 0, 0, 0, 0, -0.0475, 0, -0.1771, -0.3542, -0.0265, 0.3542, -0.1771, 0, 0.3067, -0.1771, -0.0265, 0.3067, -0.3542, -0.0265, 0.3542, -0.3542, 0, 0.3542, -0.1771, 0, 0.3067, -0.7084, -0.0265, 0, -0.6609, 0, 0.1771, -0.6609, -0.0265, 0.1771, -0.7084, -0.0265, 0, -0.7084, 0, 0, -0.6609, 0, 0.1771, -0.0475, -0.0265, -0.1771, -0.1771, 0, -0.3067, -0.1771, -0.0265, -0.3067, -0.0475, -0.0265, -0.1771, -0.0475, 0, -0.1771, -0.1771, 0, -0.3067, -0.3542, -0.0265, -0.3542, -0.5313, 0, -0.3067, -0.5313, -0.0265, -0.3067, -0.3542, -0.0265, -0.3542, -0.3542, 0, -0.3542, -0.5313, 0, -0.3067, -0.0354, -0.016, 0, -0.0781, -0.0265, -0.1594, -0.0781, -0.016, -0.1594, -0.0354, -0.016, 0, -0.0354, -0.0265, 0, -0.0781, -0.0265, -0.1594, -0.0781, -0.016, 0.1594, -0.0354, -0.0265, 0, -0.0354, -0.016, 0, -0.0781, -0.016, 0.1594, -0.0781, -0.0265, 0.1594, -0.0354, -0.0265, 0, -0.1948, -0.016, 0.2761, -0.0781, -0.0265, 0.1594, -0.0781, -0.016, 0.1594, -0.1948, -0.016, 0.2761, -0.1948, -0.0265, 0.2761, -0.0781, -0.0265, 0.1594, -0.3542, -0.016, 0.3188, -0.1948, -0.0265, 0.2761, -0.1948, -0.016, 0.2761, -0.3542, -0.016, 0.3188, -0.3542, -0.0265, 0.3188, -0.1948, -0.0265, 0.2761, -0.5136, -0.016, 0.2761, -0.3542, -0.0265, 0.3188, -0.3542, -0.016, 0.3188, -0.5136, -0.016, 0.2761, -0.5136, -0.0265, 0.2761, -0.3542, -0.0265, 0.3188, -0.6302, -0.016, 0.1594, -0.5136, -0.0265, 0.2761, -0.5136, -0.016, 0.2761, -0.6302, -0.016, 0.1594, -0.6302, -0.0265, 0.1594, -0.5136, -0.0265, 0.2761, -0.6729, -0.016, 0, -0.6302, -0.0265, 0.1594, -0.6302, -0.016, 0.1594, -0.6729, -0.016, 0, -0.6729, -0.0265, 0, -0.6302, -0.0265, 0.1594, -0.6302, -0.016, -0.1594, -0.6729, -0.0265, 0, -0.6729, -0.016, 0, -0.6302, -0.016, -0.1594, -0.6302, -0.0265, -0.1594, -0.6729, -0.0265, 0, -0.5136, -0.016, -0.2761, -0.6302, -0.0265, -0.1594, -0.6302, -0.016, -0.1594, -0.5136, -0.016, -0.2761, -0.5136, -0.0265, -0.2761, -0.6302, -0.0265, -0.1594, -0.3542, -0.016, -0.3188, -0.5136, -0.0265, -0.2761, -0.5136, -0.016, -0.2761, -0.3542, -0.016, -0.3188, -0.3542, -0.0265, -0.3188, -0.5136, -0.0265, -0.2761, -0.1948, -0.016, -0.2761, -0.3542, -0.0265, -0.3188, -0.3542, -0.016, -0.3188, -0.1948, -0.016, -0.2761, -0.1948, -0.0265, -0.2761, -0.3542, -0.0265, -0.3188, -0.0781, -0.016, -0.1594, -0.1948, -0.0265, -0.2761, -0.1948, -0.016, -0.2761, -0.0781, -0.016, -0.1594, -0.0781, -0.0265, -0.1594, -0.1948, -0.0265, -0.2761, -0.3542, 0, -0.3542, -0.6609, 0, -0.1771, -0.5313, 0, -0.3067, -0.3542, 0, -0.3542, -0.6609, 0, 0.1771, -0.6609, 0, -0.1771, -0.6609, 0, -0.1771, -0.6609, 0, 0.1771, -0.7084, 0, 0, -0.0475, 0, -0.1771, -0.3542, 0, -0.3542, -0.1771, 0, -0.3067, -0.0475, 0, 0.1771, -0.3542, 0, -0.3542, -0.0475, 0, -0.1771, -0.6609, 0, 0.1771, -0.3542, 0, -0.3542, -0.0475, 0, 0.1771, -0.0475, 0, 0.1771, -0.0475, 0, -0.1771, 0, 0, 0, -0.6609, 0, 0.1771, -0.0475, 0, 0.1771, -0.3542, 0, 0.3542, -0.3542, 0, 0.3542, -0.0475, 0, 0.1771, -0.1771, 0, 0.3067, -0.6609, 0, 0.1771, -0.3542, 0, 0.3542, -0.5313, 0, 0.3067, -0.6302, -0.007, -0.1594, -0.3542, -0.007, -0.3188, -0.5136, -0.007, -0.2761, -0.6302, -0.007, -0.1594, -0.0781, -0.007, -0.1594, -0.3542, -0.007, -0.3188, -0.3542, -0.007, -0.3188, -0.0781, -0.007, -0.1594, -0.1948, -0.007, -0.2761, -0.6302, -0.007, 0.1594, -0.6302, -0.007, -0.1594, -0.6729, -0.007, 0, -0.3542, -0.007, 0.3188, -0.6302, -0.007, -0.1594, -0.6302, -0.007, 0.1594, -0.0781, -0.007, -0.1594, -0.6302, -0.007, -0.1594, -0.3542, -0.007, 0.3188, -0.3542, -0.007, 0.3188, -0.6302, -0.007, 0.1594, -0.5136, -0.007, 0.2761, -0.0781, -0.007, -0.1594, -0.3542, -0.007, 0.3188, -0.0781, -0.007, 0.1594, -0.0781, -0.007, 0.1594, -0.3542, -0.007, 0.3188, -0.1948, -0.007, 0.2761, -0.0781, -0.007, -0.1594, -0.0781, -0.007, 0.1594, -0.0354, -0.007, 0, -0.6302, -0.007, 0.1594, -0.6729, -0.016, 0, -0.6302, -0.016, 0.1594, -0.6302, -0.007, 0.1594, -0.6729, -0.007, 0, -0.6729, -0.016, 0, -0.1948, -0.007, -0.2761, -0.0781, -0.016, -0.1594, -0.1948, -0.016, -0.2761, -0.1948, -0.007, -0.2761, -0.0781, -0.007, -0.1594, -0.0781, -0.016, -0.1594, -0.5136, -0.007, -0.2761, -0.3542, -0.016, -0.3188, -0.5136, -0.016, -0.2761, -0.5136, -0.007, -0.2761, -0.3542, -0.007, -0.3188, -0.3542, -0.016, -0.3188, -0.0781, -0.007, 0.1594, -0.1948, -0.016, 0.2761, -0.0781, -0.016, 0.1594, -0.0781, -0.007, 0.1594, -0.1948, -0.007, 0.2761, -0.1948, -0.016, 0.2761, -0.5136, -0.007, 0.2761, -0.6302, -0.016, 0.1594, -0.5136, -0.016, 0.2761, -0.5136, -0.007, 0.2761, -0.6302, -0.007, 0.1594, -0.6302, -0.016, 0.1594, -0.3542, -0.007, -0.3188, -0.1948, -0.016, -0.2761, -0.3542, -0.016, -0.3188, -0.3542, -0.007, -0.3188, -0.1948, -0.007, -0.2761, -0.1948, -0.016, -0.2761, -0.6302, -0.007, -0.1594, -0.5136, -0.016, -0.2761, -0.6302, -0.016, -0.1594, -0.6302, -0.007, -0.1594, -0.5136, -0.007, -0.2761, -0.5136, -0.016, -0.2761, -0.0354, -0.007, 0, -0.0781, -0.016, 0.1594, -0.0354, -0.016, 0, -0.0354, -0.007, 0, -0.0781, -0.007, 0.1594, -0.0781, -0.016, 0.1594, -0.3542, -0.007, 0.3188, -0.5136, -0.016, 0.2761, -0.3542, -0.016, 0.3188, -0.3542, -0.007, 0.3188, -0.5136, -0.007, 0.2761, -0.5136, -0.016, 0.2761, -0.6729, -0.007, 0, -0.6302, -0.016, -0.1594, -0.6729, -0.016, 0, -0.6729, -0.007, 0, -0.6302, -0.007, -0.1594, -0.6302, -0.016, -0.1594, -0.0781, -0.007, -0.1594, -0.0354, -0.016, 0, -0.0781, -0.016, -0.1594, -0.0781, -0.007, -0.1594, -0.0354, -0.007, 0, -0.0354, -0.016, 0, -0.1948, -0.007, 0.2761, -0.3542, -0.016, 0.3188, -0.1948, -0.016, 0.2761, -0.1948, -0.007, 0.2761, -0.3542, -0.007, 0.3188, -0.3542, -0.016, 0.3188)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_m14rh"]
data = PackedVector3Array(-0.1594, 0.016, -0.2761, 0, 0.1975, -0.2761, 0, 0.016, -0.2761, -0.1594, 0.016, -0.2761, -0.1594, 0.1975, -0.2761, 0, 0.1975, -0.2761, 0.2761, 0.016, 0.1594, 0.1594, 0.1975, 0.2761, 0.1594, 0.016, 0.2761, 0.2761, 0.016, 0.1594, 0.2761, 0.1975, 0.1594, 0.1594, 0.1975, 0.2761, -0.3067, 0.016, 0.1771, -0.1771, 0.1975, 0.3067, -0.1771, 0.016, 0.3067, -0.3067, 0.016, 0.1771, -0.3067, 0.1975, 0.1771, -0.1771, 0.1975, 0.3067, 0.1771, 0.016, -0.3067, 0, 0.1975, -0.3542, 0, 0.016, -0.3542, 0.1771, 0.016, -0.3067, 0.1771, 0.1975, -0.3067, 0, 0.1975, -0.3542, 0.1594, 0.016, 0.2761, 0, 0.1975, 0.2722, 0, 0.016, 0.2722, 0.1594, 0.016, 0.2761, 0.1594, 0.1975, 0.2761, 0, 0.1975, 0.2722, -0.3542, 0.016, 0, -0.3067, 0.1975, 0.1771, -0.3067, 0.016, 0.1771, -0.3542, 0.016, 0, -0.3542, 0.1975, 0, -0.3067, 0.1975, 0.1771, 0.3067, 0.016, -0.1771, 0.1771, 0.1975, -0.3067, 0.1771, 0.016, -0.3067, 0.3067, 0.016, -0.1771, 0.3067, 0.1975, -0.1771, 0.1771, 0.1975, -0.3067, 0, 0.016, 0.2722, -0.1594, 0.1975, 0.2761, -0.1594, 0.016, 0.2761, 0, 0.016, 0.2722, 0, 0.1975, 0.2722, -0.1594, 0.1975, 0.2761, -0.3067, 0.016, -0.1771, -0.3542, 0.1975, 0, -0.3542, 0.016, 0, -0.3067, 0.016, -0.1771, -0.3067, 0.1975, -0.1771, -0.3542, 0.1975, 0, 0.3542, 0.016, 0, 0.3067, 0.1975, -0.1771, 0.3067, 0.016, -0.1771, 0.3542, 0.016, 0, 0.3542, 0.1975, 0, 0.3067, 0.1975, -0.1771, -0.1594, 0.016, 0.2761, -0.2761, 0.1975, 0.1594, -0.2761, 0.016, 0.1594, -0.1594, 0.016, 0.2761, -0.1594, 0.1975, 0.2761, -0.2761, 0.1975, 0.1594, -0.1771, 0.016, -0.3067, -0.3067, 0.1975, -0.1771, -0.3067, 0.016, -0.1771, -0.1771, 0.016, -0.3067, -0.1771, 0.1975, -0.3067, -0.3067, 0.1975, -0.1771, -0.1771, 0.016, 0.3067, 0, 0.1975, 0.3542, 0, 0.016, 0.3542, -0.1771, 0.016, 0.3067, -0.1771, 0.1975, 0.3067, 0, 0.1975, 0.3542, 0.2761, 0.016, 0, 0.2761, 0.1975, 0.1594, 0.2761, 0.016, 0.1594, 0.2761, 0.016, 0, 0.2761, 0.1975, 0, 0.2761, 0.1975, 0.1594, 0.2761, 0.016, -0.1594, 0.2761, 0.1975, 0, 0.2761, 0.016, 0, 0.2761, 0.016, -0.1594, 0.2761, 0.1975, -0.1594, 0.2761, 0.1975, 0, -0.2761, 0.016, -0.1594, -0.1594, 0.1975, -0.2761, -0.1594, 0.016, -0.2761, -0.2761, 0.016, -0.1594, -0.2761, 0.1975, -0.1594, -0.1594, 0.1975, -0.2761, 0, 0.016, 0.3542, 0.1771, 0.1975, 0.3067, 0.1771, 0.016, 0.3067, 0, 0.016, 0.3542, 0, 0.1975, 0.3542, 0.1771, 0.1975, 0.3067, -0.2761, 0.016, 0, -0.2761, 0.1975, -0.1594, -0.2761, 0.016, -0.1594, -0.2761, 0.016, 0, -0.2761, 0.1975, 0, -0.2761, 0.1975, -0.1594, 0.1771, 0.016, 0.3067, 0.3067, 0.1975, 0.1771, 0.3067, 0.016, 0.1771, 0.1771, 0.016, 0.3067, 0.1771, 0.1975, 0.3067, 0.3067, 0.1975, 0.1771, 0.1594, 0.016, -0.2761, 0.2761, 0.1975, -0.1594, 0.2761, 0.016, -0.1594, 0.1594, 0.016, -0.2761, 0.1594, 0.1975, -0.2761, 0.2761, 0.1975, -0.1594, 0, 0.016, -0.3542, -0.1771, 0.1975, -0.3067, -0.1771, 0.016, -0.3067, 0, 0.016, -0.3542, 0, 0.1975, -0.3542, -0.1771, 0.1975, -0.3067, -0.2761, 0.016, 0.1594, -0.2761, 0.1975, 0, -0.2761, 0.016, 0, -0.2761, 0.016, 0.1594, -0.2761, 0.1975, 0.1594, -0.2761, 0.1975, 0, 0.3067, 0.016, 0.1771, 0.3542, 0.1975, 0, 0.3542, 0.016, 0, 0.3067, 0.016, 0.1771, 0.3067, 0.1975, 0.1771, 0.3542, 0.1975, 0, 0, 0.016, -0.2761, 0.1594, 0.1975, -0.2761, 0.1594, 0.016, -0.2761, 0, 0.016, -0.2761, 0, 0.1975, -0.2761, 0.1594, 0.1975, -0.2761, -0.2761, 0.1975, 0, -0.1594, 0.1975, -0.2761, -0.2761, 0.1975, -0.1594, -0.2761, 0.1975, 0, 0, 0.1975, -0.2761, -0.1594, 0.1975, -0.2761, 0, 0.1975, -0.2761, 0.2761, 0.1975, -0.1594, 0.1594, 0.1975, -0.2761, -0.2761, 0.1975, 0, 0.2761, 0.1975, -0.1594, 0, 0.1975, -0.2761, -0.2761, 0.1975, 0, 0.2761, 0.1975, 0, 0.2761, 0.1975, -0.1594, 0.2761, 0.1975, 0, -0.2761, 0.1975, 0, 0, 0.1975, 0.2722, 0.2761, 0.1975, 0, 0, 0.1975, 0.2722, 0.2761, 0.1975, 0.1594, 0.2761, 0.1975, 0.1594, 0, 0.1975, 0.2722, 0.1594, 0.1975, 0.2761, 0, 0.1975, 0.2722, -0.2761, 0.1975, 0, -0.1594, 0.1975, 0.2761, -0.1594, 0.1975, 0.2761, -0.2761, 0.1975, 0, -0.2761, 0.1975, 0.1594, -0.2761, 0.1826, 0, -0.1594, 0.1826, -0.2761, -0.2761, 0.1826, -0.1594, -0.2761, 0.1826, 0, 0, 0.1826, -0.2761, -0.1594, 0.1826, -0.2761, 0, 0.1826, -0.2761, 0.2761, 0.1826, -0.1594, 0.1594, 0.1826, -0.2761, -0.2761, 0.1826, 0, 0.2761, 0.1826, -0.1594, 0, 0.1826, -0.2761, -0.2761, 0.1826, 0, 0.2761, 0.1826, 0, 0.2761, 0.1826, -0.1594, 0.2761, 0.1826, 0, -0.2761, 0.1826, 0, 0, 0.1826, 0.2722, 0.2761, 0.1826, 0, 0, 0.1826, 0.2722, 0.2761, 0.1826, 0.1594, 0.2761, 0.1826, 0.1594, 0, 0.1826, 0.2722, 0.1594, 0.1826, 0.2761, 0, 0.1826, 0.2722, -0.2761, 0.1826, 0, -0.1594, 0.1826, 0.2761, -0.1594, 0.1826, 0.2761, -0.2761, 0.1826, 0, -0.2761, 0.1826, 0.1594, 0, 0.016, -0.3542, -0.1594, 0.016, -0.2761, 0, 0.016, -0.2761, 0, 0.016, -0.3542, -0.1771, 0.016, -0.3067, -0.1594, 0.016, -0.2761, 0.1771, 0.016, -0.3067, 0, 0.016, -0.2761, 0.1594, 0.016, -0.2761, 0.1771, 0.016, -0.3067, 0, 0.016, -0.3542, 0, 0.016, -0.2761, 0.3067, 0.016, -0.1771, 0.1594, 0.016, -0.2761, 0.2761, 0.016, -0.1594, 0.3067, 0.016, -0.1771, 0.1771, 0.016, -0.3067, 0.1594, 0.016, -0.2761, 0.3542, 0.016, 0, 0.2761, 0.016, -0.1594, 0.2761, 0.016, 0, 0.3542, 0.016, 0, 0.3067, 0.016, -0.1771, 0.2761, 0.016, -0.1594, 0.3067, 0.016, 0.1771, 0.2761, 0.016, 0, 0.2761, 0.016, 0.1594, 0.3067, 0.016, 0.1771, 0.3542, 0.016, 0, 0.2761, 0.016, 0, 0.1771, 0.016, 0.3067, 0.2761, 0.016, 0.1594, 0.1594, 0.016, 0.2761, 0.1771, 0.016, 0.3067, 0.3067, 0.016, 0.1771, 0.2761, 0.016, 0.1594, 0, 0.016, 0.3542, 0.1594, 0.016, 0.2761, 0, 0.016, 0.2722, 0, 0.016, 0.3542, 0.1771, 0.016, 0.3067, 0.1594, 0.016, 0.2761, -0.1771, 0.016, 0.3067, 0, 0.016, 0.2722, -0.1594, 0.016, 0.2761, -0.1771, 0.016, 0.3067, 0, 0.016, 0.3542, 0, 0.016, 0.2722, -0.3067, 0.016, 0.1771, -0.1594, 0.016, 0.2761, -0.2761, 0.016, 0.1594, -0.3067, 0.016, 0.1771, -0.1771, 0.016, 0.3067, -0.1594, 0.016, 0.2761, -0.3542, 0.016, 0, -0.2761, 0.016, 0.1594, -0.2761, 0.016, 0, -0.3542, 0.016, 0, -0.3067, 0.016, 0.1771, -0.2761, 0.016, 0.1594, -0.3067, 0.016, -0.1771, -0.2761, 0.016, 0, -0.2761, 0.016, -0.1594, -0.3067, 0.016, -0.1771, -0.3542, 0.016, 0, -0.2761, 0.016, 0, -0.1771, 0.016, -0.3067, -0.2761, 0.016, -0.1594, -0.1594, 0.016, -0.2761, -0.1771, 0.016, -0.3067, -0.3067, 0.016, -0.1771, -0.2761, 0.016, -0.1594)

[sub_resource type="BoxShape3D" id="BoxShape3D_lixsf"]
size = Vector3(1, 0.585205, 1)

[sub_resource type="Animation" id="Animation_lixsf"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClockBack/Clock:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 2.96706)]
}

[sub_resource type="Animation" id="Animation_m14rh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ClockBack/Clock:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nrm7x"]
_data = {
&"RESET": SubResource("Animation_m14rh"),
&"open": SubResource("Animation_lixsf")
}

[node name="Clock" instance=ExtResource("1_qwh1c")]
script = ExtResource("2_lixsf")

[node name="HourHand" parent="ClockBack/Clock" index="0"]
visible = false

[node name="HandStaticBody" type="StaticBody3D" parent="ClockBack/Clock/HourHand" index="0" groups=["Clickable"]]
script = ExtResource("2_jh2y0")
pos_needed = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClockBack/Clock/HourHand/HandStaticBody" index="0"]
shape = SubResource("ConcavePolygonShape3D_jh2y0")
disabled = true

[node name="MinuteHand" parent="ClockBack/Clock" index="1"]
transform = Transform3D(2.7954e-09, -0.0143569, 0, 0.0143569, 2.7954e-09, 0, 0, 0, 0.0143569, -0.354175, -0.0106201, 0)

[node name="HandStaticBody" type="StaticBody3D" parent="ClockBack/Clock/MinuteHand" index="0" groups=["Clickable"]]
script = ExtResource("2_jh2y0")
pos_needed = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClockBack/Clock/MinuteHand/HandStaticBody" index="0"]
shape = SubResource("ConcavePolygonShape3D_lixsf")

[node name="StaticBody3D" type="StaticBody3D" parent="ClockBack/Clock" index="2"]
transform = Transform3D(1, 1.42109e-14, 0, -1.42109e-14, 1, 0, 0, 0, 1, -0.354175, -0.0160474, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClockBack/Clock/StaticBody3D" index="0"]
transform = Transform3D(1, -2.84217e-14, 0, 2.84217e-14, 1, 0, 0, 0, 1, 0.354175, 0.0160474, 0)
shape = SubResource("ConcavePolygonShape3D_nrm7x")

[node name="StaticBody3D" type="StaticBody3D" parent="ClockBack" index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClockBack/StaticBody3D" index="0"]
transform = Transform3D(1, 1.42109e-14, 0, -1.42109e-14, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_m14rh")

[node name="PlacementStaticBody" type="StaticBody3D" parent="ClockBack" index="2" groups=["Clickable"]]
script = ExtResource("4_m14rh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClockBack/PlacementStaticBody" index="0"]
transform = Transform3D(0.204263, 6.03961e-13, 0, -6.03961e-13, 0.204263, 0, 0, 0, 0.204267, 1.24345e-14, 0.0342699, 0)
shape = SubResource("BoxShape3D_lixsf")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
&"": SubResource("AnimationLibrary_nrm7x")
}

[node name="Audio_Turn" type="AudioStreamPlayer3D" parent="." index="2"]
stream = ExtResource("5_nrm7x")
